--- a/code_folder/Data_engineering.ipynb
+++ b/code_folder/Data_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
     "LEFT JOIN\n",
     "\n",
     "(\n",
-    "   SELECT ps.raceId AS rd, ps.lap AS ps_lap, ps.driverId AS di\n",
+    "   SELECT ps.raceId AS rd, ps.lap AS ps_lap, ps.driverId AS di, ps.millisec as pit_time\n",
     "    FROM pit_stops ps\n",
     ") b\n",
     "\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +191,7 @@
        "      <th>rd</th>\n",
        "      <th>ps_lap</th>\n",
        "      <th>di</th>\n",
+       "      <th>pit_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -207,6 +208,7 @@
        "      <td>841.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>153.0</td>\n",
+       "      <td>26898.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -221,6 +223,7 @@
        "      <td>841.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>30.0</td>\n",
+       "      <td>25021.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -235,6 +238,7 @@
        "      <td>841.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>17.0</td>\n",
+       "      <td>23426.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -249,6 +253,7 @@
        "      <td>841.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>23251.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -263,6 +268,7 @@
        "      <td>841.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>13.0</td>\n",
+       "      <td>23842.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -276,15 +282,15 @@
        "3     841         4      12        12        112624   12          1   \n",
        "4     841        13      13        11        114060   13          1   \n",
        "\n",
-       "         date     rd  ps_lap     di  \n",
-       "0  2011-03-27  841.0     1.0  153.0  \n",
-       "1  2011-03-27  841.0     1.0   30.0  \n",
-       "2  2011-03-27  841.0    11.0   17.0  \n",
-       "3  2011-03-27  841.0    12.0    4.0  \n",
-       "4  2011-03-27  841.0    13.0   13.0  "
+       "         date     rd  ps_lap     di  pit_time  \n",
+       "0  2011-03-27  841.0     1.0  153.0   26898.0  \n",
+       "1  2011-03-27  841.0     1.0   30.0   25021.0  \n",
+       "2  2011-03-27  841.0    11.0   17.0   23426.0  \n",
+       "3  2011-03-27  841.0    12.0    4.0   23251.0  \n",
+       "4  2011-03-27  841.0    13.0   13.0   23842.0  "
       ]
      },
-     "execution_count": 517,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -336,6 +342,7 @@
        "      <th>circuitId</th>\n",
        "      <th>date</th>\n",
        "      <th>ps_lap</th>\n",
+       "      <th>pit_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -349,6 +356,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>26898.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -360,6 +368,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>25021.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -371,6 +380,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>11.0</td>\n",
+       "      <td>23426.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -382,6 +392,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>12.0</td>\n",
+       "      <td>23251.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -393,6 +404,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>13.0</td>\n",
+       "      <td>23842.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -406,15 +418,15 @@
        "3     841         4      12        12        112624          1  2011-03-27   \n",
        "4     841        13      13        11        114060          1  2011-03-27   \n",
        "\n",
-       "   ps_lap  \n",
-       "0     1.0  \n",
-       "1     1.0  \n",
-       "2    11.0  \n",
-       "3    12.0  \n",
-       "4    13.0  "
+       "   ps_lap  pit_time  \n",
+       "0     1.0   26898.0  \n",
+       "1     1.0   25021.0  \n",
+       "2    11.0   23426.0  \n",
+       "3    12.0   23251.0  \n",
+       "4    13.0   23842.0  "
       ]
      },
-     "execution_count": 461,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -727,6 +739,7 @@
        "      <th>circuitId</th>\n",
        "      <th>date</th>\n",
        "      <th>ps_lap</th>\n",
+       "      <th>pit_time</th>\n",
        "      <th>target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -741,6 +754,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>26898.0</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -753,6 +767,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>25021.0</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -765,6 +780,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>11.0</td>\n",
+       "      <td>23426.0</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -777,6 +793,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>12.0</td>\n",
+       "      <td>23251.0</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -789,6 +806,7 @@
        "      <td>1</td>\n",
        "      <td>2011-03-27</td>\n",
        "      <td>13.0</td>\n",
+       "      <td>23842.0</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -803,15 +821,15 @@
        "3     841         4      12        12        112624          1  2011-03-27   \n",
        "4     841        13      13        11        114060          1  2011-03-27   \n",
        "\n",
-       "   ps_lap  target  \n",
-       "0     1.0    True  \n",
-       "1     1.0    True  \n",
-       "2    11.0    True  \n",
-       "3    12.0    True  \n",
-       "4    13.0    True  "
+       "   ps_lap  pit_time  target  \n",
+       "0     1.0   26898.0    True  \n",
+       "1     1.0   25021.0    True  \n",
+       "2    11.0   23426.0    True  \n",
+       "3    12.0   23251.0    True  \n",
+       "4    13.0   23842.0    True  "
       ]
      },
-     "execution_count": 507,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,11 +968,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final.to_csv(\"./data/Final_1.csv\")"
+    "final.to_csv(\"./data/Final_2.csv\")"
    ]
   },
   {
@@ -1558,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
