--- a/code_folder/3_Modeling.ipynb
+++ b/code_folder/3_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,137 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>raceId</th>\n",
-       "      <th>driverId</th>\n",
-       "      <th>lt_lap</th>\n",
-       "      <th>position</th>\n",
-       "      <th>milliseconds</th>\n",
-       "      <th>circuitId</th>\n",
-       "      <th>date</th>\n",
-       "      <th>ps_lap</th>\n",
-       "      <th>pit_time</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>841</td>\n",
-       "      <td>153</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21</td>\n",
-       "      <td>133879</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2011-03-27</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>26898.0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>841</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>161428</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2011-03-27</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>25021.0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>841</td>\n",
-       "      <td>17</td>\n",
-       "      <td>11</td>\n",
-       "      <td>7</td>\n",
-       "      <td>114995</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2011-03-27</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>23426.0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>841</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>112624</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2011-03-27</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>23251.0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>841</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>11</td>\n",
-       "      <td>114060</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2011-03-27</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>23842.0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   raceId  driverId  lt_lap  position  milliseconds  circuitId        date  \\\n",
-       "0     841       153       1        21        133879          1  2011-03-27   \n",
-       "1     841        30       1        22        161428          1  2011-03-27   \n",
-       "2     841        17      11         7        114995          1  2011-03-27   \n",
-       "3     841         4      12        12        112624          1  2011-03-27   \n",
-       "4     841        13      13        11        114060          1  2011-03-27   \n",
-       "\n",
-       "   ps_lap  pit_time  target  \n",
-       "0     1.0   26898.0    True  \n",
-       "1     1.0   25021.0    True  \n",
-       "2    11.0   23426.0    True  \n",
-       "3    12.0   23251.0    True  \n",
-       "4    13.0   23842.0    True  "
+       "(472504, 12)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data.shape"
    ]
   },
   {
@@ -236,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,11 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X= data[features1]\n",
+    "X= data[features]\n",
     "y= data['target']"
    ]
   },
@@ -375,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +389,7 @@
        "                       random_state=42, splitter='best')"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +409,7 @@
        "0.978021766595907"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,11 +420,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "out = dt1.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False,  True, False,\n",
+       "       False])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_=pd.Series(list(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2    False\n",
+       "3    False\n",
+       "4    False\n",
+       "5    False\n",
+       "6    False\n",
+       "7     True\n",
+       "8    False\n",
+       "9    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(155927,)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(155927, 5)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.reset_index(drop=True, inplace=True)\n",
+    "out_.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "df = pd.concat( [X_test, out_], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./data/pred__.csv\")\n"
    ]
   },
   {
@@ -1178,9 +1184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'history' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-4546dfe5fc01>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhistory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_sc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'history' is not defined"
+     ]
+    }
+   ],
    "source": [
     "pred = history.model.predict(X_test_sc)"
    ]
@@ -1276,7 +1294,7 @@
     }
    ],
    "source": [
-    "senistivity_specificity(y_test,pred1)"
+    "senistivity_specificity(y_test,pred1_)"
    ]
   }
  ],
